--- a/amplify.yml
+++ b/amplify.yml
@@ -7,6 +7,7 @@ frontend:
     build:
       commands:
         - npm run build
+        - echo "BRANCH_NAME=$BRANCH_NAME" >> backend/.env
   artifacts:
     baseDirectory: build
     files:
